.deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend-it
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-backend-it
  template:
    metadata:
      labels:
        app: demo-backend-it
    spec:
      containers:
        - name: backend-container
          image: ghcr.io/achile73/demo-backend
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
