.deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-backend-it-svc
spec:
  selector:
    app: demo-backend-it
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
